latest fixes
